variables.Variables.scala.error
Compilation error:
Variables:12: error: ')' expected but '}' found.
	}
        ^